[metadata]
name = cvxkerb
version = 0.1.0
author = Philipp Schiele, Steven Diamond, Eric Luxenberg, Stephen Boyd
author_email = philipp.schiele@stat.uni-muenchen.de, diamond@cs.stanford.edu, ericlux@stanford.edu, boyd@stanford.edu
url = https://github.com/cvxpy/cvxkerb
description = Controlling Self-Landing Rockets Using CVXPY
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0

[options]
packages = find:
install_requires =
    cvxpy >= 1.3
    scipy
    matplotlib
zip_safe = True
include_package_data = True

[options.package_data]
* = README.md
